--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -36,7 +36,7 @@
 <!--      &lt;!&ndash;to solve a popping error&ndash;&gt;-->
 <!--    .tab-content > .tab-pane:not(.active) { display: block; height: 0; overflow-y: hidden; }-->
 
-
+<div id="dpi" style="height: 1in; width: 1in; left: 100%; position: fixed; top: 100%;"></div>
 <!--</style>-->
 <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header closed-sidebar">
     <div class="app-header header-shadow">
