--- a/app/static/styles/mainpage.css
+++ b/app/static/styles/mainpage.css
@@ -506,5 +506,23 @@
 }
 
 #portfolio-management .scroll-arrow {
-    top: -18%;
+    margin-top: 3%;
+}
+
+.subscription-page{
+    margin-top: 13%;
+    width: 98%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.subscription-page .card{
+    background-color: #75c7fa;
+    height: 379px;
+}
+
+.subscription-page .card-footer a{
+    color: #fff;
+    background-color: rgb(20 170 254 / 51%);
+    border-color: rgb(22 170 255 / 48%);
 }
