--- a/app/templates/account/subscriptions.html
+++ b/app/templates/account/subscriptions.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<div class="row" style="margin-top: 13%; width: 98%; margin-left: auto; margin-right: auto;">
+<div class="row subscription-page">
     {% for s in subscriptions %}
     <div class="col-md-4">
-        <div class="mb-3 card text-white" style="background-color: #75c7fa; height: 379px;">
+        <div class="mb-3 card text-white">
             <div class="card-header">{{s.subscription_name}}</div>
             <div class="card-body">
                 {{s.description|safe}}
@@ -14,8 +14,7 @@
 
                 <a href="{{url_for('account.register', subscription=s.id)}}"
                    role="button"
-                   class="mb-2 mr-2 btn-transition btn registration {% if s.id == 3 %} disabled {%endif%}"
-                   style="color: #fff; background-color: rgb(20 170 254 / 51%); border-color: rgb(22 170 255 / 48%);">
+                   class="mb-2 mr-2 btn-transition btn registration {% if s.id == 3 %} disabled {%endif%}">
                     {{s.price}}
                 </a>
             </div>
