--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -121,7 +121,7 @@
         <div class="container mt-5">
             <div class="col-md-3">
                 <div class="main-card mb-3 pt-4 card">
-                    <div class="swatch-holder swatch-holder-lg bg-primary" id="TooltipC-0">
+                    <div class="swatch-holder swatch-holder-lg bg-primary main-card-left" id="TooltipC-0">
                         <i class="fas fa-chart-line text-white"></i>
                     </div>
                     <div class="card-body">
@@ -147,7 +147,7 @@
             </div>
             <div class="col-md-6">
                 <div class="main-card mb-3 pt-4 card">
-                    <div class="swatch-holder swatch-holder-lg bg-primary" id="TooltipC-1">
+                    <div class="swatch-holder swatch-holder-lg bg-primary main-card-central" id="TooltipC-1">
                         <i class="fab fa-think-peaks text-white text-white"></i>
                     </div>
                     <div class="card-body">
@@ -180,7 +180,7 @@
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">Management</h5>
-                        <ul>
+                        <ul class="card-ul-last">
                             <a class="nav-scroll" href="#portfolio-management">
                                 <li class="scroll-item"><p>Portfolio diversification by sectors</p></li>
                             </a>
@@ -360,13 +360,13 @@
     <section id="profit-maximization">
         <div class="container px-4">
             <div class="gx-4">
-                <div class="animated lightSpeedIn">
+                <div class="animated lightSpeedIn animated-left">
                     <div class="profit-title">
                         <h2 class="section-title">Maximizing a profit for a winning position.Better than simply investing.</h2>
-                        <p class="pt-2p">
+                        <p class="pt-2p pl-p">
                             We believe that entering to position on small drops caused by market deviations and bad news and getting out of position with small profit overtime bring better value than just holding it
                         </p>
-                        <p>
+                        <p class="pl-p">
                             Aggregated profit for a shorter positions should be higher than just a stock overall revenue. Of course it will work only if stock is profitable!
                         </p>
                         <div class="d-flex right-div-flex">
@@ -385,7 +385,7 @@
                 <div class="img-first">
                     <img src="{{ url_for('static', filename='images/main/profit_maximization.png') }}">
                 </div>
-                <div class="animated lightSpeedIn animated-left">
+                <div class="animated lightSpeedIn animated-right">
                     <div class="section-title">
                         <div class="d-flex left-div-flex">
                             <div class="arrow-left-img">
