--- a/app/static/styles/mainpage.css
+++ b/app/static/styles/mainpage.css
@@ -311,7 +311,6 @@
 
 #profit-maximization .animated{
     width: 60%;
-    float: left;
     overflow: hidden;
 }
 
@@ -416,7 +415,8 @@
     padding-left: 6%;
 }
 
-.candidates-title{
+.candidates-title,
+.pl-p{
     padding-left: 5%;
 }
 
