--- a/app/static/styles/mainpage_min.css
+++ b/app/static/styles/mainpage_min.css
@@ -10,6 +10,11 @@
     max-width: 1550px !important;
 }
 
+#mainNav{
+    height: 60px;
+    background-color: #F0F8FF;
+}
+
 #page-top p,
 .section-title,
 .card-title,
@@ -37,7 +42,7 @@
 }
 
 #profit-maximization .scroll-arrow{
-    margin-top: -12%;
+    margin-top: -14%;
 }
 
 .nav-link{
@@ -136,12 +141,9 @@
     top: -9%;
 }
 
-#mainNav{
-    background-color: #F0F8FF;
-}
 
 .main-card{
-    min-height: 279.5px;
+    min-height: 308.5px;
 }
 
 #algotrader-score .section-title,
@@ -172,10 +174,6 @@
     color: #4183c4;
 }
 
-#algotrader-score .widget-content-wrapper{
-    font-size: 11px;
-}
-
 
 .scroll-item:hover{
     color: #0d3967;
@@ -183,6 +181,10 @@
                  #cad5e2 3px 3px 0, #cad5e2 4px 4px 0,
                  #cad5e2 5px 5px 0;
     color: #040000;
+}
+
+#algotrader-score .scroll-arrow{
+    margin-top: -7%;
 }
 
 .custom-card .swatch-holder{
@@ -237,9 +239,9 @@
     margin-bottom: 10%;
 }
 
-#algotrader-score .container,
-#market-emotion .container{
-    margin-top: 6%;
+
+#algotrader-score .container{
+    margin-top: 2%;
 }
 
 #algotrader-score .animated,
@@ -253,11 +255,20 @@
     z-index: 1;
 }
 
-#algotrader-score .row,
 #profit-maximization .profit-maximization-img,
 #profit-maximization .arrow-left-img{
     padding-top: 6%;
 }
+
+#algotrader-score .card-title p{
+    width: 75%;
+    font-size: 8px;
+}
+
+#algotrader-score .row{
+    padding-top: 4%;
+}
+
 
 #algotrader-score .smart-score{
     flex-direction: column;
@@ -291,7 +302,7 @@
 }
 
 #algotrader-score .relative-div{
-    left: 66%;
+    left: 52%;
     top: 9%;
 }
 
@@ -316,7 +327,8 @@
 }
 
 #market-emotion .container{
-    margin-bottom: 8%;
+    margin-bottom: -1%;
+    margin-top: 3%;
 }
 
 #market-emotion img{
@@ -357,7 +369,7 @@
 }
 
 #advantage-entry-point{
-    margin-top: -8%;
+    margin-top: -13%;
 }
 
 #advantage-entry-point .container{
@@ -395,7 +407,7 @@
 }
 
 .animated-right{
-    margin: -300px -26px 0 0;
+    margin: -238px -26px 0 0;
     float: right;
 }
 
@@ -424,18 +436,42 @@
 }
 
 #advantage-entry-point .scroll-arrow{
-    margin-top: 2%;
+    margin-top: -1%;
 }
 
-#trading-by-emotions,
-#portfolio-management,
 #candidates,
 #custom-filters{
     padding-top: 4rem !important;
 }
 
+#trading-by-emotions{
+    padding-top: 0rem !important;
+}
+
+#profit-maximization,
+#portfolio-management,
+#crash-protaction{
+    padding-top: 2rem !important;
+}
+
 #custom-filters .container{
     display: inherit;
+}
+
+.profit-maximization-img img{
+    margin-top: -65%;
+}
+
+.img-first{
+    margin-top: -2%;
+}
+
+.pl-p{
+    font-size: 12px;
+}
+
+#profit-maximization .animated-content p{
+    font-size: xx-small;
 }
 
 #custom-filters .section-title,
@@ -480,7 +516,7 @@
 }
 
 #candidates .animated{
-    margin: -558px 60px 0 0;
+    margin: -462px 42px 0 0;
 }
 
 .candidates-img-3{
@@ -591,11 +627,12 @@
 }
 
 #algotrader-score .container .gx-4{
-    margin-left: 11%;
+    margin-left: 7%;
 }
 
 header{
     padding-bottom: 6rem !important;
+    padding-top: 6.5rem !important;
 }
 
 #algotrader-score,
