--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -386,7 +386,7 @@
                     <img src="{{ url_for('static', filename='images/main/profit_maximization.png') }}">
                 </div>
                 <div class="animated lightSpeedIn animated-right">
-                    <div class="section-title">
+                    <div>
                         <div class="d-flex left-div-flex">
                             <div class="arrow-left-img">
                                 <img src="{{ url_for('static', filename='images/main/arrow_left.png') }}">
