--- a/app/static/styles/mainpage_max.css
+++ b/app/static/styles/mainpage_max.css
@@ -19,6 +19,10 @@
     color: #2F327D;
 }
 
+.main-header .content-container{
+    margin-top: 1% !important;
+}
+
 
 #page-top p,
 .section-title,
@@ -166,7 +170,7 @@
 }
 
 .main-header .scroll-arrow{
-    margin-top: 0%;
+    margin-top: -3%;
 }
 .scroll-arrow a{
     color: #4183c4;
@@ -298,17 +302,25 @@
 #algotrader-score .algo-score-img,
 #trading-by-emotions img,
 .crash-img img,
-#candidates img,
-#personal-performance img{
+#candidates img{
     width: 80%;
 }
 
+
+#personal-performance img{
+    width: 67%;
+}
+
 #crash-protaction .relative-div img{
-    width: 56%;
+    width: 52%;
 }
 
 #trading-by-emotions img{
     width: 75%;
+}
+
+#crash-protaction .scroll-arrow{
+    margin-top: -3%;
 }
 
 #advantage-entry-point img{
@@ -395,7 +407,7 @@
 }
 
 .animated-right{
-    margin: -300px -26px 0 0;
+    margin: -275px -31px 0 0;
     float: right;
 }
 
