--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -118,7 +118,7 @@
                 </div>
             </div>
         </div>
-        <div class="container mt-5">
+        <div class="container mt-5 content-container">
             <div class="col-md-3">
                 <div class="main-card mb-3 pt-4 card">
                     <div class="swatch-holder swatch-holder-lg bg-primary main-card-left" id="TooltipC-0">
