--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -118,7 +118,7 @@
                 </div>
             </div>
         </div>
-        <div class="container mt-5 content-container">
+        <div class="container mt-5 content-container mobile-hidden">
             <div class="col-md-3">
                 <div class="main-card mb-3 pt-4 card">
                     <div class="swatch-holder swatch-holder-lg bg-primary main-card-left" id="TooltipC-0">
@@ -198,14 +198,14 @@
                 </div>
             </div>
         </div>
-        <div class="fa-3x scroll-arrow">
+        <div class="fa-3x scroll-arrow mobile-hidden">
             <a class="nav-scroll" href="#algotrader-score">
                 <i class="fas fa-arrow-circle-down" aria-hidden="true"></i>
             </a>
         </div>
     </header>
     <!-- Analytics section - Algotrader Score-->
-    <section id="algotrader-score">
+    <section id="algotrader-score" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4">
                 <div class="animated lightSpeedIn">
@@ -296,7 +296,7 @@
         </div>
     </section>
     <!-- Analytics section - Market Emotion-->
-    <section id="market-emotion">
+    <section id="market-emotion" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4 d-flex">
                 <div class="emotion-img">
@@ -357,7 +357,7 @@
         </div>
     </section>
     <!-- Timing - Profit maximization -->
-    <section id="profit-maximization">
+    <section id="profit-maximization" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4">
                 <div class="animated lightSpeedIn animated-left">
@@ -408,7 +408,7 @@
         </div>
     </section>
     <!-- Timing - Advantage Entry Point -->
-    <section id="advantage-entry-point">
+    <section id="advantage-entry-point" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4">
                 <div class="animated lightSpeedIn">
@@ -428,7 +428,7 @@
         </div>
     </section>
     <!-- Timing - Trading By Emotions -->
-    <section id="trading-by-emotions">
+    <section id="trading-by-emotions" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4">
                 <div class="animated lightSpeedIn">
@@ -449,7 +449,7 @@
         </div>
     </section>
     <!-- Timing - Crash Protaction -->
-    <section id="crash-protaction">
+    <section id="crash-protaction" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4">
                 <div class="animated lightSpeedIn">
@@ -479,7 +479,7 @@
         </div>
     </section>
     <!-- MANAGEMENT - Portfolio Management -->
-    <section id="portfolio-management">
+    <section id="portfolio-management" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4">
                 <div class="animated lightSpeedIn">
@@ -507,7 +507,7 @@
         </div>
     </section>
     <!-- MANAGEMENT - Candidates -->
-    <section id="candidates">
+    <section id="candidates" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4">
                 <div class="div-left">
@@ -534,7 +534,7 @@
         </div>
     </section>
     <!-- Management - Personal Performance-->
-    <section id="personal-performance">
+    <section id="personal-performance" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4">
                 <div class="animated lightSpeedIn">
@@ -558,7 +558,7 @@
         </div>
     </section>
     <!-- Management - Custom Filters-->
-    <section id="custom-filters">
+    <section id="custom-filters" class="mobile-hidden">
         <div class="container">
             <div class="section-title">
                 <h2>Custom filters</h2>
@@ -642,7 +642,7 @@
         </div>
     </section>
     <!-- User View -->
-    <section id="user-view">
+    <section id="user-view" class="mobile-hidden">
         <div class="container px-4">
             <div class="gx-4">
                 <div class="animated lightSpeedIn">
