--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -52,7 +52,7 @@
                                     Telegram
                                 </a>
                             </li>
-                            <li class="nav-item p-3">
+                            <li class="nav-item p-3 mobile-hidden">
                                 <a href="/account/subscriptions" class="nav-link text-end">
                                     <i class="fas fa-dollar-sign pr-1"></i>
                                     Pricing
