--- a/app/templates/layouts/main.html
+++ b/app/templates/layouts/main.html
@@ -107,7 +107,7 @@
         <script type="text/javascript" src="{{ url_for('static', filename='scrolling/js/scripts.js') }}"></script>
         <script src="https://kit.fontawesome.com/9e19a61416.js" crossorigin="anonymous"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-        <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/base.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='scripts/pages/main.js') }}"></script>
 
     </body>
 </html>
