Today : searchBox text: "Stock"

--- a/app/templates/candidates/today.html
+++ b/app/templates/candidates/today.html
@@ -26,7 +26,7 @@
         <div class="ui menu">
             <div class="ui left search item">
                 <div class="ui transparent icon input">
-                    <input id="search-users" type="text" placeholder="Search users…">
+                    <input id="search-users" type="text" placeholder="Stock">
                     <i class="search icon"></i>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <thead>
                 <tr>
                     <th></th>
-                    <th class="sorted descending">Ticker</th>
+                    <th>Ticker</th>
                     <th class="sorted descending">Algotrader <br/>rank</th>
                     <th></th>
                     <th></th>
@@ -84,7 +84,13 @@
                             {{ m.ticker }}
                         </a>
                     </td>
-                    <td>{{algo_rank[m.ticker]}}</td>
+                    <td>
+                        {% if algo_rank[m.ticker] is none %}
+                        0
+                        {% else %}
+                        {{algo_rank[m.ticker]}}
+                        {% endif%}
+                    </td>
                     <td>
                         <form action="{{url_for('candidates.removecandidate')}}" method="post">
                             <input type="hidden" name="ticker_to_remove" value="{{ m.ticker }}">
@@ -130,7 +136,7 @@
                 <thead>
                 <tr>
                     <th></th>
-                    <th class="sorted descending">Ticker</th>
+                    <th>Ticker</th>
                     <th class="sorted descending">Algotrader <br/>rank</th>
                     <th>Reason</th>
                     <th>Company</th>
@@ -148,7 +154,13 @@
                             {{ m.ticker }}
                         </a>
                     </td>
-                    <td>{{algo_rank[m.ticker]}}</td>
+                    <td>
+                        {% if algo_rank[m.ticker] is none %}
+                        0
+                        {% else %}
+                        {{algo_rank[m.ticker]}}
+                        {% endif%}
+                    </td>
                     <td><textarea disabled rows="2" cols="40">{{ m.reason }}</textarea></td>
                     <td>{{ m.company_name }}</td>
                     <td>{{ m.sector }}</td>
